# synapstor

./: .actrc  .env.example  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  README.pypi.md  Start-Server.ps1  mypy.ini  mypy_runner.py  pyproject.toml  quick-uninstall.bat  quick-uninstall.sh  start-server.bat  start-server.sh  test-commit.txt  uninstall-synapstor.bat  uninstall-synapstor.py
.github/: CODEOWNERS  changelog_template.j2
.github/workflows/: changelog_template.j2  commitizen-release.yaml  generate-release.yaml  main-push.yaml  post-merge-release.yaml  pr-main.yaml  pr-release.yaml  pr-tag-release.yaml  pre-commit.yaml  pypi-publish.yaml  pytest.yaml  release.yaml  semantic-release.yaml  test.yaml  version-preview.yaml
.github/workflows/jobs/: semantic-release.yaml
cli/: README.md  __init__.py  config.py  ctl.py  indexer.py  reindex.py  server.py  setup.py  uninstall.py
cli/templates/: README.md  Start-Synapstor.ps1  start-synapstor.bat  start-synapstor.sh
docs/: criando_ferramentas.md  desinstalacao.md
installer/: synapstorctl.py  uninstall.ps1  uninstall.py  uninstall.sh
scripts/: add_path.bat  add_path.ps1  add_path.sh  start_server.py  uninstall.bat  uninstall.ps1  uninstall.sh
src/mcp_server_qdrant/: main.py  qdrant.py
src/mcp_server_qdrant/tools/: indexer.py
src/mcp_server_qdrant/utils/: __init__.py  id_generator.py
src/synapstor/: README.md  __init__.py  env_loader.py  main.py  mcp_server.py  qdrant.py  settings.py
src/synapstor/embeddings/: README.md  base.py  factory.py  fastembed.py
src/synapstor/plugins/: README.md  __init__.py  tool_boilerplate.py  tool_changelog.py  tool_conversor.py
src/synapstor/tools/: README.md  indexer.py
src/synapstor/tools/docs/: indexer.md
src/synapstor/utils/: README.md  __init__.py  id_generator.py
tests/: README.md  conftest.py  test_fastembed_integration.py  test_qdrant_integration.py  test_settings.py
