[project]
name = "synapstor"
version = "0.1.0"
description = "Uma evolução não oficial do mcp-server-qdrant - Cliente e servidor para armazenamento e busca semântica"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Malindentado", email = "malindentado@example.com"},
]
dependencies = [
    "dotenv",
    "qdrant-client[fastembed]>=1.3.1",
    "sentence-transformers>=2.2.2",
    "Unidecode>=1.3.0",
    "docopt>=0.6.0",
    "fastapi>=0.85.1",
    "uvicorn>=0.19.0",
    "langchain>=0.0.200",
]

[project.urls]
"Homepage" = "https://github.com/malindentado/synapstor"
"Bug Tracker" = "https://github.com/malindentado/synapstor/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
synapstor-index = "synapstor.tools.indexer:command_line_runner"
synapstor-server = "cli.server:main"
synapstor-reindex = "cli.reindex:main"

[tool.setuptools]
packages = ["synapstor", "cli"]
package-dir = {"synapstor" = "src/synapstor"}
