[project]
name = "synapstor"
version = "0.1.0"
description = "Uma evolução não oficial do mcp-server-qdrant - Cliente e servidor para armazenamento e busca semântica"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Malindentado", email = "malindentado@example.com" }]
dependencies = [
    "mcp[cli]>=1.3.0",
    "dotenv",
    "qdrant-client>=1.3.1",
    "fastembed>=0.6.1",
    "sentence-transformers>=2.2.2",
    "Unidecode>=1.3.0",
    "docopt>=0.6.0",
    "fastapi>=0.85.1",
    "uvicorn>=0.19.0",
    "langchain>=0.0.200",
    "pydantic-settings>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/malindentado/synapstor"
"Bug Tracker" = "https://github.com/malindentado/synapstor/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
synapstor-index = "synapstor.tools.indexer:command_line_runner"
synapstor-server = "cli.server:main"
synapstor-reindex = "cli.reindex:main"
synapstor-setup = "cli.setup:main"
synapstor-uninstall = "installer.synapstorctl:uninstall_command"
uninstall-synapstor = "installer.uninstall:main"
synapstor-remove = "cli.uninstall:main"
synapstorctl = "installer.synapstorctl:main"

[tool.setuptools]
packages = ["synapstor", "cli", "installer"]
package-dir = { "synapstor" = "src/synapstor" }

[project.optional-dependencies]
fastembed = ["fastembed>=0.6.1"]
